<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Arias</string>
    <string name="anadir_compra">Añadir compra</string>
    <string name="menu_preferencias">Preferencias</string>
    <string name="menu_informacion_arias">Información Arias</string>
    <string name="menu_establecer_usuario">Establecer Usuario</string>
    <string name="menu_usuarios">Gestión Usuarios</string>
    <string name="menu_mis_compras">Mis Compras</string>
    <string name="title_activity_nueva_compra">NuevaCompraActivity</string>
    <string name="producto">Producto:</string>
    <string name="numero_unidades">Nº de unidades:</string>
    <string name="fecha_compra">Fecha de compra:</string>
    <string name="guardar_compra">Guardar compra</string>
    <string name="eliminar_compra">Eliminar compra</string>
    <string name="error_numero_unidades_entero_decimal">Debe introducir un número entero ó decimal en "Nº de unidades"</string>
    <string name="error_fecha_compra_fecha_con_formato">Debe introducir una fecha con formato "dd/MM/yyyy" en "Fecha de compra"</string>
    <string name="nueva_compra_guardada_error">Nueva compra no guardada</string>
    <string name="nueva_compra_usuario">Nueva compra de %s</string>
    <string name="compras_usuario">Compras de %s</string>
    <string name="anadiendo_compra">Añadiendo compra: %s</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_informacion_arias">InformacionAriasActivity</string>
    <string name="title_activity_preferencias">PreferenciasActivity</string>
    <string name="establecer_usuario">Establecer Usuario</string>
    <string name="fijar_usuario">Fijar Usuario</string>
    <string name="usuario">Usuario:</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_usuarios">UsuariosActivity</string>
    <string name="eliminar_usuario">Eliminar usuario</string>
    <string name="eliminar_usuario_no_posible">No es posible borrar el usuario de la sesión</string>
    <string name="eliminar_usuario_no_posible_tiene_compras">No es posible borrar el usuario. Primero debe borrar sus compras.</string>
    <string name="eliminar_usuario_ok">Usuario %s eliminado correctamente</string>
    <string name="eliminar_compra_ok">Compra eliminada correctamente</string>
    <string name="saludo_inicial">Saludo inicial</string>
    <string name="texto_saludo_inicial">Texto saludo inicial</string>
    <string name="mostrar_saludo_inicial">Mostrar un mensaje de saludo al entrar en la aplicación</string>
    <string name="introducir_saludo_inicial">Introducir el texto del mensaje de saludo a mostrar</string>
    <string name="saludo_defecto">Bienvenido a la aplicación Mis compras de Arias!!!!</string>
    <string name="texto_saludo">texto_saludo</string>
    <string name="saludo">saludo</string>
    <string name="hola">Hola</string>

</resources>