<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_mis_compras"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_mis_compras"/>
    <item
        android:id="@+id/menu_marcas"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_marcas"/>
    <item
        android:id="@+id/menu_usuario"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_establecer_usuario"/>
    <item
        android:id="@+id/menu_usuarios"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_usuarios"/>
    <item
        android:id="@+id/menu_preferencias"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_preferencias"/>
    <item
        android:id="@+id/menu_arias"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_informacion_arias"/>

</menu>